Changes in booking slip and add two columns in booking model

--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -31,6 +31,7 @@
                 $("#amount").val(doc_data.amount);
                 $("#remarks").val(doc_data.remarks);
                 $("#weight").val(doc_data.weight);
+                $("#qty").val(doc_data.pcs);
             },
         });
     });
