--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -133,6 +133,12 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-6 mt-2">
+                        <label for="qty"><b>Pcs.</b></label>
+                        <input type="number" name="qty" id="qty" class="form-control" placeholder="" value="1">
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-12 mt-2">
                         <label for="remarks"><b>Remarks</b></label>
                         <textarea class="form-control" id="remarks" name="remarks" rows="2"></textarea>
@@ -147,6 +153,8 @@
                 </div>
             </form>
         </div>
+
+        <!-- Showing booked entries from here -->
         <div class="col-md-6 mt-3">
             <h4 class="alert alert-primary text-center" tabindex="0">Booked shipment details</h4>
             <div class="table-responsive">
