Update printout for booking

--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -261,7 +261,7 @@
                     <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.remarks }}</td>
                 </tr>
                 <tr>
-                    <td colspan="5" style="font-size: 11px; border: 0;"><b>Terms & Conditions*</b></td>
+                    <td colspan="5" style="font-size: 8px; border: 0;"><b>Terms & Conditions*</b></td>
                     <td colspan="3" style="border: 1px solid black; border-bottom: 0px; border-right: 0px; text-align: center;" rowspan="3">
                         <div id="qrcode">
                             {{ qr_code | safe}}
@@ -270,13 +270,14 @@
                     <!-- Need to setup QR Code -->
                 </tr>
                 <tr>
-                    <td colspan="5" style="font-size: 10px; border: 0;">&nbsp; &#8226; Condition 1st</td>
+                    <td colspan="5" rowspan="3" style="font-size: 7px; border: 0; border-bottom: 1px solid black; padding-top: 0px;">&nbsp; &#8226; Condjb ajebfjqn giqer gqejrhbgfqj fiqrbgq enrgbqir gjerbgqj eibrg iebg jkjnek ekjfnqkew fkjqwenfke fjbrj hbsdfjv akdbfaj akhb ja vakh vajd KHB AJD V AHBAH VAJHBAJERH GAJD FBFAH FRBR FBHQERB ABE FJHQER FAJ <br>For more
+                        information Visit: <b style="font-size: 11x;">www.airpostxpress.com</b> </td>
                 </tr>
                 <tr>
-                    <td colspan="5" style="font-size: 10px; border: 0;">&nbsp; &#8226; Condition 2nd</td>
+                    <!-- <td colspan="5" style="font-size: 10px; border: 0;">&nbsp; &#8226; Condition 2nd</td> -->
                 </tr>
                 <tr>
-                    <td colspan="5" style="font-size: 10px; border: 0px; border-bottom: 1px solid black;">&nbsp; &#8226; Condition 3rd</td>
+                    <!-- <td colspan="5" style="font-size: 10px; border: 0px; border-bottom: 1px solid black;"></td> -->
                     <td colspan="3" style="font-size: 10px; border: 0px; border-left: 1px solid black; border-bottom: 1px solid black; text-align: center;">Scan To Track</td>
                 </tr>
 
