--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -113,6 +113,11 @@
                         </li>
                         <li><a class="dropdown-item" href="{% url 'c_note_master' %}">C Note Master</a></li>
                         {% endif %}
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="{% url 'delivery_area_master' %}">Delivery Area Master</a></li>
+
                     </ul>
                 </div>
             </div>
