--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -137,7 +137,7 @@
                     <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.remarks }}</td>
                 </tr>
                 <tr>
-                    <td colspan="5" style="font-size: 8px; border: 0;"><b>Terms & Conditions*</b></td>
+                    <td colspan="5" style="font-size: 7px; border: 0;"><b>Terms & Conditions*</b></td>
                     <td colspan="3" style="border: 1px solid black; border-bottom: 0px; border-right: 0px; text-align: center;" rowspan="3">
                         <div id="qrcode">
                             {{ qr_code | safe}}
@@ -146,8 +146,8 @@
                     <!-- Need to setup QR Code -->
                 </tr>
                 <tr>
-                    <td colspan="5" rowspan="3" style="font-size: 7px; border: 0; border-bottom: 1px solid black; padding-top: 0px;">&nbsp; &#8226; Condjb ajebfjqn giqer gqejrhbgfqj fiqrbgq enrgbqir gjerbgqj eibrg iebg jkjnek ekjfnqkew fkjqwenfke fjbrj hbsdfjv akdbfaj akhb ja vakh vajd KHB AJD V AHBAH VAJHBAJERH GAJD FBFAH FRBR FBHQERB ABE FJHQER FAJ <br>For more
-                        information Visit: <b style="font-size: 11x;">www.airpostxpress.com</b> </td>
+                    <td colspan="5" rowspan="3" style="font-size: 6px; border: 0; border-bottom: 1px solid black; padding-top: 0px;">Accurate declaration required. No liability for false info or seized goods. Claims within 15 days. Max liability: Rs. 100 per article. No claims for refusal, delays, incomplete addresses. Prompt service but no guaranteed time. No gold,
+                        silver, bearer cheques, shares, or cash. No claims for cash, jewellery, contraband, passports, or undeclared items. Prohibited: share certificates with blank transfer deeds.<br>For more information Visit: <b style="font-size: 11x;">www.airpostxpress.com</b>                        </td>
                 </tr>
                 <tr>
                     <!-- <td colspan="5" style="font-size: 10px; border: 0;">&nbsp; &#8226; Condition 2nd</td> -->
@@ -158,14 +158,14 @@
                 </tr>
 
                 <tr>
-                    <td colspan="8" style="font-size: 11px; border: 0;"><b>Franchise Details:</b></td>
+                    <td colspan="8" style="font-size: 9px; border: 0;"><b>Franchisee:</b></td>
                 </tr>
                 <tr>
                     <td colspan="8" style="font-size: 9px; border: 0;">{{ ud.branch_name }}, Mob: {{ ud.branch_incharge_number }}</td>
                 </tr>
                 <tr>
                     <td colspan="6" style="font-size: 8px; border: 0;">{{ ud.address }}</td>
-                    <td colspan="2" style="font-size: 10px; border: 0; text-align: center;"><b>Sign.</b></td>
+                    <td colspan="2" style="font-size: 9px; border: 0; text-align: center;"><b>Sign.</b></td>
                 </tr>
             </table>
         </div>
