--- a/api/templates/tracking.html
+++ b/api/templates/tracking.html
@@ -70,12 +70,20 @@
                         {% endif %} {% if last_status.name == 'DELIVERED' %}
                         <tr>
                             <th scope="row" class="text-success">Current Status</th>
+                            {% if user.is_authenticated %}
                             <td class="text-success"><b>{{ last_status }} - {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            {% else %}
+                            <td class="text-success"><b>{{ last_status }}</b></td>
+                            {% endif %}
                         </tr>
                         {% else %}
                         <tr>
                             <th scope="row">Current Status</th>
+                            {% if user.is_authenticated %}
                             <td><b>{{ last_status }} - {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            {% else %}
+                            <td><b>{{ last_status }}</b></td>
+                            {% endif %}
                         </tr>
                         {% endif %} {% if only_and_only_drs == 1 %}
                         <tr>
